apps/sonarr/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarr-virtual-service
  namespace: media
spec:
  hosts:
  - "tvsearch.securefamily.tv"
  gateways:
  - default/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    - uri:
        regex: ^\/[^\.]+.*
    route:
    - destination:
        port:
          number: 8989
        host: sonarr-service.media.svc.cluster.local
